@@ -12,29 +12,58 @@ IPV6
 IPV6_VERSION=6
 IPV6_TRAFFIC_CLASS=255
 IPV6_FLOW_LABEL=1234
-IPV6_PAYLOAD_LENGTH=64
-IPV6_NEXT_HEADER=58
+IPV6_PAYLOAD_LENGTH=180
+IPV6_NEXT_HEADER=0
 IPV6_HOP_LIMIT=128
 IPV6_SRC_ADDR=fe80::213
 IPV6_DST_ADDR=E23::9AD
-IPV6_EXT_HDRS=0
+IPV6_EXT_HDRS=5
 
-ICMP6
-ICMP6_TYPE=136
-ICMP6_CODE=0
-ICMP6_CHECKSUM=-1
+HOP_BY_HOP
+HBH_NXT_HDR=60
+HBH_HDR_EXT_LEN=1
+HBH_OPTION_NUM=3
+HBH_OPTION=PAD1
+HBH_OPTION=PADN
+PADN_N=5
+HBH_OPTION=RAW
+RAW_DATA=0x0106000000000000
 
-NDISC_NA
-NDISC_NA_R=1
-NDISC_NA_S=0
-NDISC_NA_O=1
-NDISC_NA_TARGET_ADDR=fe89::34
-NDISC_NA_OP_NUM=2
+DESTINATION_HEADER
+DH_NXT_HDR=43
+DH_HDR_EXT_LEN=2
+DH_OPTION_NUM=3
+DH_OPTION=PAD1
+DH_OPTION=PADN
+PADN_N=5
+DH_OPTION=RAW
+RAW_DATA=0x00010d00000000000000000000000000
 
-NDISC_NA_OPTION=NDISC_NA_SRC_LINK_ADDR
-NDISC_NA_OP_TYPE=2
-NDISC_NA_OP_LEN=1
-NDISC_NA_OP_TAR_LINK_ADDR=12:AB:34:CD:56:EF
+ROUTING_HEADER
+RH_NXT_HDR=43
+RH_EXT_LEN=4
+RH_TYPE=0
+RH_SEG_LEFT=2
+RH_DATA
+RH_ADDR=abcd::1
+RH_ADDR=1234::a
 
-NDISC_NA_OPTION=RAW
-RAW_DATA=0x9abcdef8
+ROUTING_HEADER
+RH_NXT_HDR=44
+RH_EXT_LEN=3
+RH_TYPE=3
+RH_SEG_LEFT=3
+RH_DATA
+RH_CMPRI=8
+RH_CMPRE=12
+RH_PAD=-1
+RH_OP_NUM=3
+RH_ADDR=7897::23
+RH_ADDR=878::AB
+RH_ADDR=8000::1A
+
+FRAGMENT_HEADER
+FH_NXT_HDR=59
+FH_OFFSET=4
+FH_M_FLAG=1
+FH_IDENTIFICATION=45
