@@ -17,7 +17,7 @@ IPV6_NEXT_HEADER=0
 IPV6_HOP_LIMIT=128
 IPV6_SRC_ADDR=fe80::213
 IPV6_DST_ADDR=E23::9AD
-IPV6_EXT_HDRS=4
+IPV6_EXT_HDRS=5
 
 HOP_BY_HOP
 HBH_NXT_HDR=60
@@ -40,13 +40,27 @@ DH_OPTION=RAW
 RAW_DATA=0x00010d00000000000000000000000000
 
 ROUTING_HEADER
-RH_NXT_HDR=44
+RH_NXT_HDR=43
 RH_EXT_LEN=4
 RH_TYPE=0
 RH_SEG_LEFT=2
 RH_DATA
 RH_ADDR=abcd::1
 RH_ADDR=1234::a
+
+ROUTING_HEADER
+RH_NXT_HDR=44
+RH_EXT_LEN=3
+RH_TYPE=3
+RH_SEG_LEFT=3
+RH_DATA
+RH_CMPRI=8
+RH_CMPRE=12
+RH_PAD=-1
+RH_OP_NUM=3
+RH_ADDR=7897::23
+RH_ADDR=878::AB
+RH_ADDR=8000::1A
 
 FRAGMENT_HEADER
 FH_NXT_HDR=59
